--- a/andflare/front-page.html
+++ b/andflare/front-page.html
@@ -20,6 +20,16 @@
   </head>
   <body>
     <div class="front-page bg1">
+      <div class="front-navigation">
+        <div class="nav-items">
+            <a href="#">Help</a>
+            <a href="#">Products</a>
+            <a href="#">Company</a>
+            <a href="#">Sign up</a>
+            <a href="#">Log in</a>
+        </div>
+
+      </div>
       <div class="font-page-content">
         <img src="img/logo-white.svg" width="150px" />
         <h1>Make stuff, look at stuff, talk about stuff, find your people</h1>
