--- a/andflare/front-page.html
+++ b/andflare/front-page.html
@@ -21,14 +21,27 @@
   <body>
     <div class="front-page bg1">
       <div class="front-navigation">
-        <div class="nav-items">
-            <a href="#">Help</a>
-            <a href="#">Products</a>
-            <a href="#">Company</a>
-            <a href="#">Sign up</a>
-            <a href="#">Log in</a>
+        <div class="search-form">
+          <form>
+            <div class="from-group">
+              <img src="img/search-white.svg">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Search Andflare"
+                aria-label="search"
+                aria-describedby="search"
+              />
+            </div>
+          </form>
         </div>
-
+        <div class="nav-items">
+          <a href="#">Help</a>
+          <a href="#">Products</a>
+          <a href="#">Company</a>
+          <a href="#">Sign up</a>
+          <a href="#">Log in</a>
+        </div>
       </div>
       <div class="font-page-content">
         <img src="img/logo-white.svg" width="150px" />
