--- a/andflare/front-page.html
+++ b/andflare/front-page.html
@@ -10,6 +10,9 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,7 +27,7 @@
         <div class="search-form">
           <form>
             <div class="from-group">
-              <img src="img/search-white.svg">
+              <img src="img/search-white.svg" />
               <input
                 type="text"
                 class="form-control"
@@ -68,6 +71,203 @@
           <a href="#">Privacy</a></small
         >
       </div>
+      <h2 class="trending-title"><img src="img/DISCOVER-white.svg"> Here's what's trending</h2>
+      <div class="trending-slide">
+        <div class="trending-card kaka">
+          <span>#weritebir</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card red">
+          <span>#santa klarita diet</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card orange">
+          <span>#studio ghibli</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card kaka-light">
+          <span>#home decor</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+
+        <div class="trending-card geen-yellow">
+          <span>#ilustration</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card pink">
+          <span>#fashion</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card orange-dark">
+          <span>#recipes</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card kaka">
+          <span>#cooking</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card green">
+          <span>#gouache</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card orange-dark">
+          <span>#recipes</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card geen-yellow">
+          <span>#ilustration</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card kaka-light">
+          <span>#home decor</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+
+        <div class="trending-card geen-yellow">
+          <span>#ilustration</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card kaka">
+          <span>#weritebir</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card red">
+          <span>#santa klarita diet</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card orange">
+          <span>#studio ghibli</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+      </div>
       <a class="down-stripe" href="#">
         What is Andflare?
       </a>
@@ -75,6 +275,11 @@
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
