--- a/andflare/front-page.html
+++ b/andflare/front-page.html
@@ -28,6 +28,7 @@
           <form>
             <div class="from-group">
               <img src="img/search-white.svg" />
+              <div class="blur-bg"></div>
               <input
                 type="text"
                 class="form-control"
@@ -71,7 +72,10 @@
           <a href="#">Privacy</a></small
         >
       </div>
-      <h2 class="trending-title"><img src="img/DISCOVER-white.svg"> Here's what's trending</h2>
+      <h2 class="trending-title">
+        <img src="img/DISCOVER-white.svg" /> Here's what's trending
+      </h2>
+
       <div class="trending-slide">
         <div class="trending-card kaka">
           <span>#weritebir</span>
@@ -266,6 +270,14 @@
             ></div>
           </div>
           <button>Follow</button>
+        </div>
+      </div>
+      <div class="paginator-center text-color text-center">
+        <div class="next">
+            <img src="img/chevron-right.svg" width="42px">
+        </div>
+        <div class="prev">
+            <img src="img/chevron-left.svg" width="42px">
         </div>
       </div>
       <a class="down-stripe" href="#">
