--- a/andflare/front-page.html
+++ b/andflare/front-page.html
@@ -73,7 +73,8 @@
         >
       </div>
       <h2 class="trending-title">
-        <img src="img/DISCOVER-white.svg" /> Here's what's trending
+        <div><img src="img/DISCOVER-white.svg" /> Here's what's trending</div>
+        <span>Posted by username <img src="img/user.png"/></span>
       </h2>
 
       <div class="trending-slide">
@@ -274,10 +275,10 @@
       </div>
       <div class="paginator-center text-color text-center">
         <div class="next">
-            <img src="img/chevron-right.svg" width="42px">
+          <img src="img/chevron-right.svg" width="42px" />
         </div>
         <div class="prev">
-            <img src="img/chevron-left.svg" width="42px">
+          <img src="img/chevron-left.svg" width="42px" />
         </div>
       </div>
       <a class="down-stripe" href="#">
