--- a/andflare/front-page.html
+++ b/andflare/front-page.html
@@ -25,6 +25,23 @@
     <div class="front-page bg1">
       <div class="front-navigation">
         <div class="search-form">
+          <div class="dropdown">
+            <button
+              class="btn btn-secondary dropdown-toggle"
+              type="button"
+              id="dropdownMenuButton"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+            ···
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Example one</a>
+              <a class="dropdown-item" href="#">Example two</a>
+              <a class="dropdown-item" href="#">Example three</a>
+            </div>
+          </div>
           <form>
             <div class="from-group">
               <img src="img/search-white.svg" />
