--- a/andflare/front-page.html
+++ b/andflare/front-page.html
@@ -312,10 +312,21 @@
               </button>
             </div>
             <div class="modal-body">
-              ...
+                <form class="mb-5">
+                    <div class="form-group">
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                      <small id="emailHelp" class="form-text text-muted"><a href="#"><img src="img/question-circle.svg"/>Learn about exporting members.</a></small>
+                    </div> 
+                    <button type="submit" class="btn btn-primary btn-green">Recieve magic link</button>
+                  </form>
+                  <div class="down-part">
+                  <img src="img/logo-purple.svg"/>
+                  <span>Learn about exporting <br>about exporting members.</span>
+                </div>
             </div>
-            <div class="modal-footer">
-           
+            <div class="modal-footer ">
+              <span class="tooltip-static">New</span>
+              <a href="#">Instagram <img src="img/ARROW-UP-RIGHT-ICON.svg"/></a>
             </div>
           </div>
         </div>
@@ -323,21 +334,32 @@
 
       <div class="modal fade signup-login" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="signupModalLabel">Andflare - Sign up</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                ...
-              </div>
-              <div class="modal-footer">
-             
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="loginModalLabel">Andflare - Sign up</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                    <form class="mb-5">
+                        <div class="form-group">
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                          <small id="emailHelp" class="form-text text-muted"><a href="#"><img src="img/question-circle.svg"/>Learn about exporting members.</a></small>
+                        </div> 
+                        <button type="submit" class="btn btn-primary btn-green">Recieve magic link</button>
+                      </form>
+                      <div class="down-part">
+                      <img src="img/logo-purple.svg"/>
+                      <span>Learn about exporting <br>about exporting members.</span>
+                    </div>
+                </div>
+                <div class="modal-footer ">
+                  <span class="tooltip-static">New</span>
+                  <a href="#">Instagram <img src="img/ARROW-UP-RIGHT-ICON.svg"/></a>
+                </div>
               </div>
             </div>
-          </div>
         </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
