--- a/andflare/search-page.html
+++ b/andflare/search-page.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
+    <link rel="stylesheet" type="text/css" href="css/lightbox.min.css" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,38 +23,356 @@
     <![endif]-->
   </head>
   <body>
-      <div class="alert top-message" role="alert">
-          <button type="button" class="close" data-dismiss="alert">×</button>
-          <strong>Great deliverability without upgrading to dedicated IP.</strong> Some provides say it can't be done. We disagree.
-        </div>
+    <div class="alert top-message" role="alert">
+      <button type="button" class="close" data-dismiss="alert">×</button>
+      <strong>Great deliverability without upgrading to dedicated IP.</strong>
+      Some provides say it can't be done. We disagree.
+    </div>
     <div class="main-page">
       <div class="search-banner"></div>
       <div class="horizontal-scroll-nav">
-          <a href="#">Tours</a>
-          <a href="#">Mix</a>
-          <a href="#">Musique</a>
-          <a href="#">Nature</a>
-          <a href="#">ASMR</a>
-          <a href="#">Patients</a>
-          <a href="#">Randonnees pedestres</a>
-          <a href="#">Championnats</a>
-          <a href="#">Nature</a>
-          <a href="#">ASMR</a>
-          <a href="#">Patients</a>
-          <a href="#">Randonnees pedestres</a>
-          <a href="#">Championnats</a>
-          <a href="#">Mix</a>
-          <a href="#">Musique</a>
+        <a href="#">Tours</a>
+        <a href="#">Mix</a>
+        <a href="#">Musique</a>
+        <a href="#">Nature</a>
+        <a href="#">ASMR</a>
+        <a href="#">Patients</a>
+        <a href="#">Randonnees pedestres</a>
+        <a href="#">Championnats</a>
+        <a href="#">Nature</a>
+        <a href="#">ASMR</a>
+        <a href="#">Patients</a>
+        <a href="#">Randonnees pedestres</a>
+        <a href="#">Championnats</a>
+        <a href="#">Mix</a>
+        <a href="#">Musique</a>
+      </div>
+      <div class="grid-cards">
+        <div class="grid-card">
+          <div class="card-head">
+            <img
+              src="img/dummy-images/profile-image.png"
+              class="profile-image"
+            />
+            <span>surfer-roo01</span>
+            <div class="dropdown">
+              <button
+                class="btn btn-secondary dropdown-toggle"
+                type="button"
+                id="dropdownMenuButton"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                ···
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Example one</a>
+                <a class="dropdown-item" href="#">Example two</a>
+                <a class="dropdown-item" href="#">Example three</a>
+              </div>
+            </div>
+          </div>
+          <a
+            class=""
+            href="img/dummy-images/nasa_multi-axis_gimble_rig.jpeg"
+            data-lightbox="image1"
+            ><img
+              class=""
+              src="img/dummy-images/nasa_multi-axis_gimble_rig.jpeg"
+              alt=""
+          /></a>
+          <div class="card-footer">
+              <a href="#">#beach</a> <a href="#">#sea</a> <a href="#">#sand</a>
+              <a href="#">#surf</a> <a href="#">#sun </a> <a href="#">#fun</a>
+              <a href="#">#ocean </a><a href="#">#wavess </a
+              ><a href="#">#summer </a><a href="#">#endlesssummer </a>
+              <a href="#">#travel</a> <a href="#">#tropical </a
+              ><a href="#">#adventure </a><a href="#">#videogames #gameboy</a>
+            </div>
+        </div>
+        <div class="grid-card">
+          <div class="card-head">
+            <img
+              src="img/dummy-images/profile-image.png"
+              class="profile-image"
+            />
+            <span>surfer-roo01</span>
+            <div class="dropdown">
+              <button
+                class="btn btn-secondary dropdown-toggle"
+                type="button"
+                id="dropdownMenuButton"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                ···
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Example one</a>
+                <a class="dropdown-item" href="#">Example two</a>
+                <a class="dropdown-item" href="#">Example three</a>
+              </div>
+            </div>
+          </div>
+          <a
+            class=""
+            href="img/dummy-images/gif-animation.gif"
+            data-lightbox="image2"
+            ><img class="" src="img/dummy-images/gif-animation.gif" alt=""
+          /></a>
+          <div class="card-footer">
+            <a href="#">#beach</a> <a href="#">#sea</a> <a href="#">#sand</a>
+            <a href="#">#surf</a> <a href="#">#sun </a> <a href="#">#fun</a>
+            <a href="#">#ocean </a><a href="#">#wavess </a
+            ><a href="#">#summer </a><a href="#">#endlesssummer </a>
+            <a href="#">#travel</a> <a href="#">#tropical </a
+            ><a href="#">#adventure </a><a href="#">#videogames #gameboy</a>
+          </div>
+        </div>
+      </div>
+      <div class="sort-nav">
+        <a href="#">Hot</a>
+        <a href="#">New</a>
+        <a href="#" class="active">Top</a>
+      </div>
+      <div class="trending-slide">
+        <div class="trending-card kaka">
+          <span>#weritebir</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card red">
+          <span>#santa klarita diet</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card orange">
+          <span>#studio ghibli</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card kaka-light">
+          <span>#home decor</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+
+        <div class="trending-card geen-yellow">
+          <span>#ilustration</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card pink">
+          <span>#fashion</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card orange-dark">
+          <span>#recipes</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card kaka">
+          <span>#cooking</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card green">
+          <span>#gouache</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card orange-dark">
+          <span>#recipes</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card geen-yellow">
+          <span>#ilustration</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card kaka-light">
+          <span>#home decor</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+
+        <div class="trending-card geen-yellow">
+          <span>#ilustration</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card kaka">
+          <span>#weritebir</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card red">
+          <span>#santa klarita diet</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+        <div class="trending-card orange">
+          <span>#studio ghibli</span>
+          <div class="grid-images">
+            <div
+              style="background-image:url('img/dummy-images/met_silk_kashan_carpet.jpeg')"
+            ></div>
+            <div
+              style="background-image:url('img/dummy-images/nasa_orion_nebula.jpeg')"
+            ></div>
+          </div>
+          <button>Follow</button>
+        </div>
+      </div>
+      <div class="paginator-center text-color text-center">
+        <div class="next">
+          <img src="img/chevron-right.svg" width="42px" />
+        </div>
+        <div class="prev">
+          <img src="img/chevron-left.svg" width="42px" />
+        </div>
       </div>
     </div>
+    <a class="down-stripe relative" href="#">
+      What is Andflare?
+    </a>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://unpkg.com/magic-grid@3.2.4/dist/magic-grid.min.js"></script>
+    <script src="js/lightbox.min.js"></script>
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
     ></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
+    <script>
+      let magicGrid = new MagicGrid({
+        container: ".grid-cards",
+        animate: true,
+        gutter: 30,
+        static: true,
+        useMin: true,
+        maxColumns: 4
+      });
+
+      magicGrid.listen();
+
+      lightbox.option({
+        resizeDuration: 200,
+        wrapAround: true
+      });
+    </script>
   </body>
 </html>
