--- a/andflare/search-page.html
+++ b/andflare/search-page.html
@@ -29,7 +29,46 @@
       Some provides say it can't be done. We disagree.
     </div>
     <div class="main-page">
-      <div class="search-banner"></div>
+      <div class="search-banner">
+        <div class="front-navigation">
+          <div class="search-form">
+              <img src="img/logo-white.svg" />
+              <a class="notification" href="#"><label>22</label> <span class="tooltip-static">Pinned items and+</span></a>
+            <!-- <form>
+              <div class="from-group">
+                <img src="img/search-white.svg" />
+                <div class="blur-bg"></div>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Search Andflare"
+                  aria-label="search"
+                  aria-describedby="search"
+                />
+              </div>
+            </form> -->
+          </div>
+          <div class="search-form nav-menu">
+            <div class="dropdown">
+              <button
+                class="btn btn-secondary dropdown-toggle"
+                type="button"
+                id="dropdownMenuButton"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                ···
+              </button>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Example one</a>
+                <a class="dropdown-item" href="#">Example two</a>
+                <a class="dropdown-item" href="#">Example three</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="horizontal-scroll-nav">
         <a href="#">Tours</a>
         <a href="#">Mix</a>
@@ -66,7 +105,7 @@
               >
                 ···
               </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">Example one</a>
                 <a class="dropdown-item" href="#">Example two</a>
                 <a class="dropdown-item" href="#">Example three</a>
@@ -83,13 +122,13 @@
               alt=""
           /></a>
           <div class="card-footer">
-              <a href="#">#beach</a> <a href="#">#sea</a> <a href="#">#sand</a>
-              <a href="#">#surf</a> <a href="#">#sun </a> <a href="#">#fun</a>
-              <a href="#">#ocean </a><a href="#">#wavess </a
-              ><a href="#">#summer </a><a href="#">#endlesssummer </a>
-              <a href="#">#travel</a> <a href="#">#tropical </a
-              ><a href="#">#adventure </a><a href="#">#videogames #gameboy</a>
-            </div>
+            <a href="#">#beach</a> <a href="#">#sea</a> <a href="#">#sand</a>
+            <a href="#">#surf</a> <a href="#">#sun </a> <a href="#">#fun</a>
+            <a href="#">#ocean </a><a href="#">#wavess </a
+            ><a href="#">#summer </a><a href="#">#endlesssummer </a>
+            <a href="#">#travel</a> <a href="#">#tropical </a
+            ><a href="#">#adventure </a><a href="#">#videogames #gameboy</a>
+          </div>
         </div>
         <div class="grid-card">
           <div class="card-head">
@@ -109,7 +148,7 @@
               >
                 ···
               </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">Example one</a>
                 <a class="dropdown-item" href="#">Example two</a>
                 <a class="dropdown-item" href="#">Example three</a>
