--- a/andflare/search-page.html
+++ b/andflare/search-page.html
@@ -32,8 +32,11 @@
       <div class="search-banner">
         <div class="front-navigation">
           <div class="search-form">
-              <img src="img/logo-white.svg" />
-              <a class="notification" href="#"><label>22</label> <span class="tooltip-static">Pinned items and+</span></a>
+            <img src="img/logo-white.svg" />
+            <a class="notification" href="#"
+              ><label>22</label>
+              <span class="tooltip-static">Pinned items and+</span></a
+            >
             <!-- <form>
               <div class="from-group">
                 <img src="img/search-white.svg" />
@@ -60,12 +63,33 @@
               >
                 ···
               </button>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+              <div
+                class="dropdown-menu dropdown-menu-right"
+                aria-labelledby="dropdownMenuButton"
+              >
                 <a class="dropdown-item" href="#">Example one</a>
                 <a class="dropdown-item" href="#">Example two</a>
                 <a class="dropdown-item" href="#">Example three</a>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="middle-content">
+          <h1>Make stuff, look at stuff, talk weird stuff, find you people</h1>
+          <div class="search-form">
+            <form>
+              <div class="from-group">
+                <img src="img/search-white.svg" />
+                <div class="blur-bg"></div>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Find what they do"
+                  aria-label="search"
+                  aria-describedby="search"
+                />
+              </div>
+            </form>
           </div>
         </div>
       </div>
@@ -105,7 +129,10 @@
               >
                 ···
               </button>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+              <div
+                class="dropdown-menu dropdown-menu-right"
+                aria-labelledby="dropdownMenuButton"
+              >
                 <a class="dropdown-item" href="#">Example one</a>
                 <a class="dropdown-item" href="#">Example two</a>
                 <a class="dropdown-item" href="#">Example three</a>
@@ -148,7 +175,10 @@
               >
                 ···
               </button>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+              <div
+                class="dropdown-menu dropdown-menu-right"
+                aria-labelledby="dropdownMenuButton"
+              >
                 <a class="dropdown-item" href="#">Example one</a>
                 <a class="dropdown-item" href="#">Example two</a>
                 <a class="dropdown-item" href="#">Example three</a>
