--- a/andflare/search-page.html
+++ b/andflare/search-page.html
@@ -30,26 +30,26 @@
     </div>
     <div class="main-page">
       <div class="search-banner">
-        <div class="front-navigation">
+        <div class="front-navigation navigation-page">
           <div class="search-form">
             <img src="img/logo-white.svg" />
             <a class="notification" href="#"
               ><label>22</label>
               <span class="tooltip-static">Pinned items and+</span></a
             >
-            <!-- <form>
+            <form class="search-bar">
               <div class="from-group">
                 <img src="img/search-white.svg" />
                 <div class="blur-bg"></div>
                 <input
                   type="text"
                   class="form-control"
-                  placeholder="Search Andflare"
+                  placeholder="Find what they do"
                   aria-label="search"
                   aria-describedby="search"
                 />
               </div>
-            </form> -->
+            </form>
           </div>
           <div class="search-form nav-menu">
             <div class="dropdown">
