--- a/andflare/front-page.html
+++ b/andflare/front-page.html
@@ -121,8 +121,8 @@
         >
       </div>
       <h2 class="trending-title">
-        <div><img src="img/DISCOVER-white.svg" /> Here's what's trending</div>
-        <span>Posted by username <img src="img/user.png"/></span>
+        <a href="#"><img src="img/DISCOVER-white.svg" /> Here's what's trending</a>
+        <a href="#" class="user-posted">Posted by username <img src="img/user.png"/></a>
       </h2>
 
       <div class="trending-slide">
