--- a/andflare/search-page.html
+++ b/andflare/search-page.html
@@ -65,7 +65,7 @@
           <div class="search-form nav-menu">
             <div class="dropdown">
               <button
-                class="btn btn-secondary dropdown-toggle"
+                class="btn btn-secondary"
                 type="button"
                 id="dropdownMenuButton"
                 data-toggle="dropdown"
@@ -141,7 +141,7 @@
             <span>surfer-roo01</span>
             <div class="dropdown">
               <button
-                class="btn btn-secondary dropdown-toggle"
+                class="btn btn-secondary"
                 type="button"
                 id="dropdownMenuButton"
                 data-toggle="dropdown"
@@ -187,7 +187,7 @@
             <span>surfer-roo01</span>
             <div class="dropdown">
               <button
-                class="btn btn-secondary dropdown-toggle"
+                class="btn btn-secondary"
                 type="button"
                 id="dropdownMenuButton"
                 data-toggle="dropdown"
